--- a/index.qmd
+++ b/index.qmd
@@ -3,7 +3,7 @@ title: "Data-driven insights into healthcare acquired infections: two case studi
 author: Michael Lydeamore
 date: today
 format:
-    presentation-revealjs:
+    presentation-revealjs+letterbox:
         fig-align: center
 ---
 
